--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
-  "name": "jack-bot-alimh1976",
+  "name": "jackbotcasinogame",
   "version": "1.0.0",
   "description": "a chance game",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": ".git"
-  },
   "keywords": [
     "game",
     "chance",
